Upate docs & validation error response
