# internal/handlers/user.go
@@ -28,20 +28,19 @@ func NewUserHandler(queries *db.Queries) *UserHandler {
 	return userHandler
 }
 
-// createUser creates a new user.
-//
 // @Summary Create a new user
 // @Description Create a new user with the provided user data.
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param user body userRequest true "User data"
+// @Param user body UserRequest true "User data"
 // @Success 201 {object} db.User "Created user"
-// @Failure 400 "Bad request"
-// @Failure 500 "Internal server error"
+// @Failure 400 {object} ErrorResponse "Bad request"
+// @Failure 422 {object} ValidationErrorResponse "Validation error"
+// @Failure 500 {object} InternalErrorResponse "Internal server error"
 // @Router /user [post]
 func (u *UserHandler) createUser(w http.ResponseWriter, r *http.Request) {
-	user := &userRequest{}
+	user := &UserRequest{}
 
 	if err := decodeAndValidate(w, r, user); err != nil {
 		return
@@ -64,14 +63,12 @@ func (u *UserHandler) createUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(resp)
 }
 
-// getUsers returns the list of all users.
-//
 // @Summary Get all users
 // @Description Get the list of all users.
 // @Tags User
 // @Produce json
 // @Success 200 {array} db.User "List of users"
-// @Failure 500 "Internal server error"
+// @Failure 500 {object} InternalErrorResponse "Internal server error"
 // @Router /user [get]
 func (u *UserHandler) getUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := u.queries.ListUsers(r.Context())
@@ -89,19 +86,18 @@ func (u *UserHandler) getUsers(w http.ResponseWriter, r *http.Request) {
 	w.Write(resp)
 }
 
-// updateUser updates an existing user.
-//
 // @Summary Update an existing user
 // @Description Update an existing user with the provided user data.
 // @Tags User
 // @Accept json
 // @Produce json
 // @Param id path int true "User ID"
-// @Param user body userRequest true "User data"
+// @Param user body UserRequest true "User data"
 // @Success 200 {object} db.User "Updated user"
-// @Failure 400 "Bad request"
-// @Failure 404 "User not found"
-// @Failure 500 "Internal server error"
+// @Failure 400 {object} ErrorResponse "Bad request"
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 422 {object} ValidationErrorResponse "Validation error"
+// @Failure 500 {object} InternalErrorResponse "Internal server error"
 // @Router /user/{id} [put]
 func (u *UserHandler) updateUser(w http.ResponseWriter, r *http.Request) {
 	userIdParam := chi.URLParam(r, "id")
@@ -116,7 +112,7 @@ func (u *UserHandler) updateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	user := &userRequest{}
+	user := &UserRequest{}
 
 	if err := decodeAndValidate(w, r, user); err != nil {
 		return
@@ -148,15 +144,14 @@ func (u *UserHandler) updateUser(w http.ResponseWriter, r *http.Request) {
 	w.Write(resp)
 }
 
-// deleteUser deletes an existing user.
-//
 // @Summary Delete an existing user
 // @Description Delete an existing user with the provided user ID.
 // @Tags User
 // @Param id path int true "User ID"
 // @Success 204 "No content"
-// @Failure 404 "User not found"
-// @Failure 500 "Internal server error"
+// @Failure 400 {object} ErrorResponse "Bad Request"
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 500 {object} InternalErrorResponse "Internal server error"
 // @Router /user/{id} [delete]
 func (u *UserHandler) deleteUser(w http.ResponseWriter, r *http.Request) {
 	userIdParam := chi.URLParam(r, "id")
@@ -184,17 +179,15 @@ func (u *UserHandler) deleteUser(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNoContent)
 }
 
-// getUserTodos returns the list of all todos of a user.
-//
 // @Summary Get all todos of a user
 // @Description Get the list of all todos of a user with the provided user ID.
 // @Tags User
 // @Produce json
 // @Param id path int true "User ID"
 // @Success 200 {array} db.Todo "List of todos"
-// @Failure 400 "Bad request"
-// @Failure 404 "User not found"
-// @Failure 500 "Internal server error"
+// @Failure 400 {object} ErrorResponse "Bad request"
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 500 {object} InternalErrorResponse "Internal server error"
 // @Router /user/{id}/todos [get]
 func (u *UserHandler) getUserTodos(w http.ResponseWriter, r *http.Request) {
 	userIdParam := chi.URLParam(r, "id")
